--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,1 +1,8 @@
-<p>sidebar works!</p>
+<ul class="nav nav-pills flex-column">
+    <li class="nav-item">
+        <a class="nav-link" href="#">Overview</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#">Notifications</a>
+    </li>
+</ul>
