Add routing and ng2-chart

--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,8 +1,35 @@
 <ul class="nav nav-pills flex-column">
     <li class="nav-item">
-        <a class="nav-link" href="#">Overview</a>
+        <a class="nav-link" routerLink="/overview">Overview</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="#">Notifications</a>
+        <a class="nav-link" routerLink="/notifications">Notifications</a>
+    </li>
+    <li class="sb-header nav-item navbar-brand">
+        <h2>Track</h2>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" routerLink="/track/money">Expenses</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" routerLink="/track/time">Tasks</a>
+    </li>
+    <li class="sb-header nav-item navbar-brand">
+        <h2>Manage</h2>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" routerLink="/manage/money">Expenses</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" routerLink="/manage/time">Tasks</a>
+    </li>
+    <li class="sb-header nav-item navbar-brand">
+        <h2>Other</h2>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" routerLink="/settings">Settings</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" routerLink="/faq">FAQ</a>
     </li>
 </ul>
