--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,8 @@
 <div class="container-fluid">
   <div class="row" id="mainContent">
     <app-sidebar id="sidebar" class="col-sm-3 col-md-2 d-none d-sm-block bg-light sidebar"></app-sidebar>
-    <div class="col-sm-9 col-md-10" id="dashboard">
+    <div class="col-sm-9 col-md-10 ml-sm-auto col-md-10 pt-3 " id="dashboard">
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
