--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@
 }
 
 html {
-    height:100%;
+    height: 100%;
 }
 
 body {
@@ -23,6 +23,32 @@ a:hover{
 
 .shadow{
     box-shadow: 0 8px 12px rgba(0,0,0,0.2), 0 5px 6px rgba(0,0,0,0.3);
+}
+
+.section-container{
+    padding: 30px;
+}
+
+.card-theme {
+    background-color: #121833;
+    border:none;
+    border-radius: 2px;
+}
+
+.card-header-theme{
+    background-color: #0E132C;
+    border-top-right-radius: 8px;
+    border-top-left-radius: 8px;
+    padding:12px;
+}
+
+.card-body-theme{
+    background-color: #121833;
+}
+
+.cards{
+    display: flex;
+    flex-direction: column;
 }
 
 .section-container{
